<resources>
    <string name="app_name">Wagwan</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="display_username">Display Username</string>
    <string name="last_seen">Last Seen</string>
    <string name="sender_messages">Sender messages ...</string>
    <string name="receiver_messages">Receiver messages ...</string>
    <string name="write_your_message_here">Write your message here...</string>
    <string name="username">Username</string>
    <string name="hello_from_sir_bento">Hello from Sir_Bento</string>
    <string name="send_message">Send Message</string>
    <string name="cancel_chat_request">Cancel Chat Request</string>
    <string name="email">Email...</string>
    <string name="password">Password...</string>
    <string name="create_account">Create Account</string>
    <string name="already_have_account">Already Have Account ?</string>
    <string name="text">text</string>

    <string name="user_status">User Status</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="todo">TODO</string>
</resources>
