<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/register_image"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/text"
        android:scaleType="fitCenter"
        android:src="@drawable/signup_photo" />

    <EditText
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_image"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="17dp"
        android:autofillHints=""
        android:textSize="17sp"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/email"
        android:drawableLeft="@drawable/email"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="4dp" />


    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_email"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="17dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="17dp"
        android:autofillHints=""
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/password"
        android:drawableLeft="@drawable/password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="4dp"
        android:textSize="17sp"/>


    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_password"
        android:layout_marginLeft="19dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="19dp"
        android:background="@drawable/buttons"
        android:padding="4dp"
        android:fontFamily="sans-serif"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/already_have_account_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_button"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="23dp"
        android:layout_marginRight="23dp"
        android:gravity="center_horizontal"
        android:text="@string/already_have_account"
        android:textAlignment="center"
        android:textColor="@color/lightGreenish"
        android:textSize="17sp"
        android:textStyle="bold" />

</RelativeLayout>