<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/users_profile_image"
            android:layout_width="92dp"
            android:layout_height="92dp"
            android:padding="5dp"
            android:src="@drawable/profile_image" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/user_profile_name"
                    android:layout_width="200dp"
                    android:layout_marginTop="8dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:layout_marginLeft="10dp"
                    android:gravity="start"
                    android:text="@string/username"
                    android:textAlignment="textStart"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/user_online_status"
                    android:layout_width="21dp"
                    android:layout_height="20dp"
                    android:layout_marginTop="8dp"
                    android:contentDescription="@string/todo"
                    android:src="@drawable/online"
                    android:visibility="invisible" />

            </LinearLayout>


            <TextView
                android:id="@+id/user_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginLeft="10dp"
                android:fontFamily="serif"
                android:gravity="start"
                android:text="@string/user_status"
                android:textAlignment="textStart"
                android:textSize="15sp"
                android:textStyle="italic"

                />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/request_accept_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:background="#8FCC00"
                    android:text="@string/accept"
                    android:textAllCaps="false"
                    android:textSize="16sp"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/request_cancel_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginStart="18dp"
                    android:layout_marginLeft="18dp"
                    android:background="@android:color/holo_red_light"
                    android:text="@string/cancel"
                    android:textAllCaps="false"
                    android:textColor="@android:color/background_light"
                    android:textSize="16sp"
                    android:visibility="invisible" />


            </LinearLayout>


        </LinearLayout>

    </LinearLayout>

</RelativeLayout>