<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/profile_activity"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/visit_profile_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        android:src="@drawable/profile_image"
        />

    <TextView
        android:id="@+id/visit_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/visit_profile_image"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="15dp"
        android:gravity="center_horizontal"
        android:text="@string/username"
        android:fontFamily="serif"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/visit_profile_status"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/visit_user_name"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="15dp"
        android:gravity="center_horizontal"
        android:text="@string/hello_from_sir_bento"
        android:fontFamily="serif"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textSize="18sp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/send_message_request_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/visit_profile_status"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="65dp"
        android:background="@drawable/buttons"
        android:fontFamily="serif"
        android:text="@string/send_message"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold"

        />


    <Button
        android:id="@+id/decline_message_request_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/send_message_request_button"
        android:layout_marginLeft="65dp"
        android:layout_marginTop="6dp"
        android:layout_marginRight="65dp"
        android:background="@drawable/buttons"
        android:fontFamily="serif"
        android:text="@string/cancel_chat_request"
        android:textAllCaps="false"
        android:textColor="@android:color/background_light"
        android:textSize="18sp"
        android:textStyle="bold"
        android:visibility="invisible" />

</RelativeLayout>